--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "cleanUrls": true
+  "cleanUrls": true,
+  "rewrites": [
+    {
+      "source": "/api/contact",
+      "destination": "/api/contact.py"
+    }
+  ]
 }
