--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,4 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "cleanUrls": true,
-  "rewrites": [
-    {
-      "source": "/api/contact",
-      "destination": "/api/contact_handler.py"
-    }
-  ]
+  "cleanUrls": true
 }
